# graal-grimoirelab-analysis

./: .gitignore  Dockerfile  README.md  config.json  extraction-config.json  feature_extraction.py  graal-git.py  pyproject.toml
.devcontainer/: devcontainer.json
results/chaoss/: grimoirelab-bestiary.json  grimoirelab-cereslib.json  grimoirelab-elk.json  grimoirelab-graal.json  grimoirelab-kidash.json  grimoirelab-kingarthur.json  grimoirelab-perceval-puppet.json  grimoirelab-perceval-weblate.json  grimoirelab-perceval.json  grimoirelab-sigils.json  grimoirelab-sirmordred.json  grimoirelab-sortinghat.json  grimoirelab-toolkit.json  grimoirelab-tutorial.json  grimoirelab.json
results/cocom/chaoss/: grimoirelab-cereslib.json  grimoirelab-graal.json  grimoirelab-kidash.json  grimoirelab-kingarthur.json  grimoirelab-perceval-puppet.json  grimoirelab-perceval-weblate.json  grimoirelab-toolkit.json
results/coqua/chaoss/: grimoirelab-cereslib_code_quality_flake8.json  grimoirelab-cereslib_code_quality_pylint.json  grimoirelab-elk_code_quality_flake8.json  grimoirelab-elk_code_quality_pylint.json  grimoirelab-graal_code_quality_flake8.json  grimoirelab-graal_code_quality_pylint.json  grimoirelab-kidash_code_quality_flake8.json  grimoirelab-kidash_code_quality_pylint.json  grimoirelab-kingarthur_code_quality_flake8.json  (+13 more)
src/: complexity_lifetime.py  loc_counter.py  more_extract.py  simpler_cocom_extraction.py
src/playground/: config.json  extraction-config.json  feature_extraction.py  graal-git.py
src/results/: cocom-complete
(+2 files in other folders)
